--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,4 +1,22 @@
 <h1><%= @list.name %></h1>
 
+<ul class="list-group">
+<% @list.movies.each do |movie| %>
+<li class="lits-group-item">
+<%= movie.title %>
+<%= movie.overview %>
+<%= movie.poster_url %>
+<%= Bookmark.find_by(movie_id: movie.id, list_id: @list.id).comment %>
+<%= link_to "Delete Bookmark", list_bookmark_path(@list, Bookmark.find_by(movie_id: movie.id, list_id: @list.id)), data: { turbo_method: :delete, turbo_confirm: "Are you sure?"} %>
+</li>
+<% end %>
+</ul>
+
+<%= simple_form_for [@list, @bookmark] do |f| %>
+<%= f.association :movie, colection: Movie.all.order(:title),promt: "Choose a Movie" %>
+<%= f.input :comment %>
+<%= f.submit "Add to list" %>
+<% end %>
+
 <%= link_to 'Back to list', lists_path %>
 <%= link_to 'Edit your list', edit_list_path %>
